@@ -1,5 +1,6 @@
 libnvidia-container (1.5.1~rc.1-1) UNRELEASED; urgency=medium
 
+  * [BUGFIX] Respect root setting when resolving GSP firmware path
   * [BUILD] Add support for SOURCE_DATE_EPOCH to specify build date
   * Allow getpgrp syscall when SECCOMP is enabled
   * Allow _llseek syscall when SECCOMP is enabled
